Minor fix. Added image to clear whitespace

--- a/tuco_frontend/assets/scss/3-components/_recentnewslist.scss
+++ b/tuco_frontend/assets/scss/3-components/_recentnewslist.scss
@@ -1,3 +1,13 @@
+
+
+
+
+
+.recentnews_img{
+    border-bottom: 0.625rem solid $darkPrimaryColor;
+}
+
+
 .recent_list{
     list-style-type: none;
 
